--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,4 +1,5 @@
 // Bourbon mixin library
+//Prepros handles this import and it may cause errors if using another preprocessor.
 @import "bourbon";
 
 //Settings
