--- a/scss/app.scss
+++ b/scss/app.scss
@@ -63,8 +63,11 @@
   "components/images", 
   "components/hoverpanels", 
   "components/animations", 
+  "components/menus", 
   "components/buttons", 
-  "components/forms", 
+  "components/forms",
+  "components/comments",  
   "components/layout", 
   "components/tabs", 
-  "components/slick";
+  "components/slick", 
+  "components/carousels";
