--- a/scss/app.scss
+++ b/scss/app.scss
@@ -56,6 +56,7 @@
   "components/hacks", 
   "components/ie", 
   "components/fonts", 
+  "components/type", 
   "components/global", 
   "components/colours", 
   "components/images", 
