--- a/scss/app.scss
+++ b/scss/app.scss
@@ -53,20 +53,21 @@
 //Import our bespoke components
 @import 
   "components/variables", 
+  "components/mixins", 
   "components/hacks", 
   "components/ie", 
-  "components/fonts", 
   "components/type", 
   "components/global", 
-  "components/colours", 
   "components/images", 
-  "components/hoverpanels", 
   "components/animations", 
   "components/menus", 
   "components/buttons", 
   "components/forms",
-  "components/comments",  
+  "components/comments", 
+  "components/header", 
+  "components/footer", 
   "components/layout", 
   "components/tabs", 
+  "components/social", 
   "components/slick", 
   "components/carousels";
