--- a/scss/components/slick.scss
+++ b/scss/components/slick.scss
@@ -1,4 +1,4 @@
-//Slick.js Default CSS
+//Slick.js Default/Base CSS
 /* Override these settngs in carousels.js */
 
 $slick-font-path: "../scss/slick/fonts/" !default;
