WordPress compatibility improvements
Removed php short tags. Added language_attributes().  Added default WP
classes to global.acss. Added editor-styles.scss

--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 /*
 Theme Name: Blank WordPress Theme
-Theme URI:  http://www.richardblyth.com
-Description:  A blank WordPress theme built on Zurb Foundation
-Version:    1.0.3
-Author:     Richard Blyth
-Author URI:   http://www.richardblyth.com
+Theme URI: http://www.richardblyth.com
+Description: A blank WordPress theme built on Zurb Foundation
+Version: 1.0.4
+Author: Richard Blyth
+Author URI: http://www.richardblyth.com
+License: GNU General Public License v2.0
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
