--- a/scss/components/global.scss
+++ b/scss/components/global.scss
@@ -13,3 +13,34 @@ img {
 iframe {
   border: 0 none;
 }
+
+
+
+/* WordPress Classes */
+.wp-caption {
+
+}
+.wp-caption-text {
+
+}
+.sticky {
+
+}
+.screen-reader-text {
+
+}
+.gallery-caption {
+
+}
+.bypostauthor {
+
+}
+.alignright {
+
+}
+.alignleft {
+
+}
+.aligncenter {
+  
+}
