--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 /*
-Theme Name: Blank WordPress Theme
-Theme URI: http://www.richardblyth.com
+Theme Name: Blank WordPress Theme SASS
+Theme URI: https://github.com/richardblyth/Blank-WordPress-Theme-SASS-Version-
 Description: A blank WordPress theme built on Zurb Foundation
-Version: 1.0.4
+Tags: custom-menu, custom-logo, custom-header, editor-style, custom-background, full-width-template
+Text Domain: Blank-WordPress-Theme-SASS
+Version: 1.0.5
 Author: Richard Blyth
 Author URI: http://www.richardblyth.com
 License: GNU General Public License v2.0
