--- a/scss/components/global.scss
+++ b/scss/components/global.scss
@@ -18,29 +18,40 @@ iframe {
 
 /* WordPress Classes */
 .wp-caption {
-
+  font-size: inherit;
 }
 .wp-caption-text {
-
+  font-size: inherit;
 }
 .sticky {
-
+  font-size: inherit;
 }
 .screen-reader-text {
-
+  font-size: inherit;
 }
 .gallery-caption {
-
+  font-size: inherit;
 }
 .bypostauthor {
-
+  font-size: inherit;
 }
 .alignright {
-
+  float: right;
+  margin: 0 0 rem-calc(16) rem-calc(16);
 }
 .alignleft {
-
+  float: left;
+  margin: 0 rem-calc(16) rem-calc(16) 0;
 }
 .aligncenter {
-  
+  margin: 0 auto;
+}
+
+.size-auto, 
+.size-full,
+.size-large,
+.size-medium,
+.size-thumbnail {
+  max-width: 100%;
+  height: auto;
 }
