--- a/scss/slick/slick.scss
+++ b/scss/slick/slick.scss
@@ -4,7 +4,6 @@
     position: relative;
     display: block;
     box-sizing: border-box;
-    -moz-box-sizing: border-box;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -93,4 +92,7 @@
         height: auto;
         border: 1px solid transparent;
     }
+}
+.slick-arrow.slick-hidden {
+    display: none;
 }
