--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/*! normalize.css v4.0.0 | MIT License | github.com/necolas/normalize.css */
+/*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Change the default font family in all browsers (opinionated).
  * 2. Prevent adjustments of font size after orientation changes in IE and iOS.
@@ -379,8 +379,7 @@ textarea {
 }
 
 /**
- * Remove the inner padding and cancel buttons in Chrome on OS X and
- * Safari on OS X.
+ * Remove the inner padding and cancel buttons in Chrome and Safari on OS X.
  */
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
@@ -397,7 +396,7 @@ textarea {
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Chrome and Safari.
+ * 2. Change font properties to `inherit` in Safari.
  */
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
@@ -8346,7 +8345,6 @@ th.hide-for-touch {
   position: relative;
   display: block;
   box-sizing: border-box;
-  -moz-box-sizing: border-box;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -8427,6 +8425,10 @@ th.hide-for-touch {
   display: block;
   height: auto;
   border: 1px solid transparent;
+}
+
+.slick-arrow.slick-hidden {
+  display: none;
 }
 
 /* Global Variables */
@@ -9998,14 +10000,14 @@ Example markup -
 /* Override these settngs in carousels.js */
 /* Slider */
 .slick-loading .slick-list {
-  background: #fff url("./images/ajax-loader.gif") center center no-repeat;
+  background: #fff url("./ajax-loader.gif") center center no-repeat;
 }
 
 /* Icons */
 @font-face {
   font-family: "slick";
-  src: url("../scss/slick/fonts/slick.eot");
-  src: url("../scss/slick/fonts/slick.eot?#iefix") format("embedded-opentype"), url("../scss/slick/fonts/slick.woff") format("woff"), url("../scss/slick/fonts/slick.ttf") format("truetype"), url("../scss/slick/fonts/slick.svg#slick") format("svg");
+  src: url("./fonts/slick.eot");
+  src: url("./fonts/slick.eot?#iefix") format("embedded-opentype"), url("./fonts/slick.woff") format("woff"), url("./fonts/slick.ttf") format("truetype"), url("./fonts/slick.svg#slick") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -10022,7 +10024,9 @@ Example markup -
   background: transparent;
   color: transparent;
   top: 50%;
-  margin-top: -10px;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
   padding: 0;
   border: none;
   outline: none;
@@ -10043,12 +10047,12 @@ Example markup -
 .slick-next.slick-disabled:before {
   opacity: 0.25;
 }
-
-.slick-prev:before, .slick-next:before {
+.slick-prev:before,
+.slick-next:before {
   font-family: "slick";
   font-size: 20px;
   line-height: 1;
-  color: black;
+  color: white;
   opacity: 0.75;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -10083,17 +10087,18 @@ Example markup -
 }
 
 /* Dots */
-.slick-slider {
+.slick-dotted.slick-slider {
   margin-bottom: 30px;
 }
 
 .slick-dots {
   position: absolute;
-  bottom: -45px;
+  bottom: -25px;
   list-style: none;
   display: block;
   text-align: center;
   padding: 0;
+  margin: 0;
   width: 100%;
 }
 .slick-dots li {
